fix warning ide warning messages